[package]
name = "robot_helper"
version = "0.1.0"
authors = ["Paul Florence <perso@florencepaul.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librobot = {git="https://github.com/ClubRobotINSAT/librobot"}
heapless = "*"
